--- a/package.json
+++ b/package.json
@@ -19,12 +19,10 @@
 		"test:unit": "mocha -r esm test/test_*.js",
 		"lint": "eslint --cache *.js src test && echo ✓"
 	},
-	"dependencies": {
-		"blueimp-md5": "^2.10.0"
-	},
+	"dependencies": {},
 	"devDependencies": {
 		"eslint-config-fnd": "^1.3.0",
-		"esm": "^3.0.6",
-		"mocha": "^5.0.4"
+		"esm": "^3.0.16",
+		"mocha": "^5.0.5"
 	}
 }
