created rudimentary web UI
this will be a TiddlyWiki-style self-contained SPA because those can be
easily self-hosted without the need for complex server infrastructure;
all we need is `GET` and `PUT`, so something like WebDAV would suffice

lit-html seems technically impressive (small, efficient) and generally
promising, but tagged template literals make for less declarative code
than, say, JSX - plus there appear to be some quirks, e.g. WRT
conditional attributes (cf. inline comment, though perhaps lit-extended
might fix that? I'm not sure and currently unwilling to go that route)

basically, it appears I'm spoiled by complate - but at this point, using
complate-dom instead seems unadvisable because it would mean going
against the grain; at least lit-html appears to have significantly more
momentum when it comes to vanilla JavaScript client-side templating

--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
 		"test:unit": "mocha -r esm test/test_*.js",
 		"lint": "eslint --cache *.js src test && echo ✓"
 	},
-	"dependencies": {},
+	"dependencies": {
+		"lit-html": "^0.9.0"
+	},
 	"devDependencies": {
 		"eslint-config-fnd": "^1.3.0",
-		"esm": "^3.0.16",
-		"mocha": "^5.0.5"
+		"esm": "^3.0.18",
+		"faucet-pipeline-js": "^1.0.0-rc.5",
+		"mocha": "^5.1.0"
 	}
 }
