--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
 	"main": "…",
 	"module": "…",
 	"scripts": {
+		"start": "npm run compile -- --watch",
 		"test": "npm run lint && npm run test:unit",
+		"compile": "faucet --compact",
 		"test:unit": "mocha -r esm test/test_*.js",
 		"lint": "eslint --cache *.js src test && echo ✓"
 	},
@@ -26,6 +28,7 @@
 		"eslint-config-fnd": "^1.3.0",
 		"esm": "^3.0.18",
 		"faucet-pipeline-js": "^1.0.0-rc.5",
+		"faucet-pipeline-sass": "^1.0.0-rc.3",
 		"mocha": "^5.1.0"
 	}
 }
