--- a/package.json
+++ b/package.json
@@ -22,13 +22,14 @@
 		"lint": "eslint --cache *.js src test && echo ✓"
 	},
 	"dependencies": {
-		"lit-html": "^0.9.0"
+		"classnames": "^2.2.5",
+		"complate-dom": "^1.2.0"
 	},
 	"devDependencies": {
-		"eslint-config-fnd": "^1.3.0",
-		"esm": "^3.0.18",
-		"faucet-pipeline-js": "^1.0.0-rc.5",
+		"eslint-config-fnd-jsx": "^1.3.0",
+		"esm": "^3.0.21",
+		"faucet-pipeline-jsx": "^1.0.0-rc.5",
 		"faucet-pipeline-sass": "^1.0.0-rc.3",
-		"mocha": "^5.1.0"
+		"mocha": "^5.1.1"
 	}
 }
